# brain-graph

./: .gitignore  .gitleaksignore  README.md  SESSION_NOTES.md  TODO.md  brain  build_db.py  check_duplicate.py  chunker.py  config_converter.py  db_schema.sql  docker-compose.yaml  embedder.py  eventual-tumbling-pine.md  file_utils.py  llm_verifier.py  models.py  ner_extractor.py  process_all.py  pyproject.toml  search.py  search_test.py  summarizer.py  taxonomy.edges.json  taxonomy.nodes.json  taxonomy.parquet  taxonomy_converter.py  taxonomy_embedder.py  taxonomy_matcher.py  test_db.py  test_reranker.py
.brain_graph/: queue.json
archive/: test_chat.md
brain_graph/: __init__.py  agent_daemon.py  models.py
config/: config.md  taxonomy.md
doc/: eventual-tumbling-pine.md
inbox/: Black_hole.md  Blockchain.md  Computer_network.md  Cryptography.md  Folgen_der_globalen_Erwärmung.md  Französische_Revolution.md  Game_theory.md  Immune_system.md  Industrialisierung.md  Industrielle_Revolution_in_Deutschland.md  Jazz.md  Klassische_Musik.md  Klimawandel.md  Kognitive_Verzerrung.md  Künstliche_Intelligenz.md  Maschinelles_Lernen.md  Memory.md  Neural_network_(machine_learning).md  Operating_system.md  Photosynthese.md  Photosynthesis.md  Python_(programming_language).md  Quantenverschränkung.md  Renewable_energy.md  Urban_planning.md  Versionsverwaltung.md  test_meeting.md
schema/: chunk.schema.json  entity.schema.json  link.schema.json  section.schema.json
search/: __init__.py  reranking.py  search.py
tests/: test_chunker_determinism.py  test_db_builder_fast.py  (+4 more)
(+79 files in other folders)
