[project]
name = "brain-graph"
version = "0.2.0"
description = "Brain Graph - Semantic knowledge base with vector search and graph queries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["knowledge-management", "semantic-search", "graph-database", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "duckdb>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
    "xxhash>=3.0.0",
    "langdetect>=1.0.9",
    "pysbd>=0.3.4",
    "markdown-query>=0.1.0",
    "requests>=2.31.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "schedule>=1.2.0",
    "tavily-python>=0.3.0",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
brain = "brain_graph.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_graph"]
